--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	
 	<body>
+		<p id='btitle'>A Free Code Camp challenge<br /><span class='bbyline'>made by D3</span></p>
 		<svg class="chart"></svg>
+		<div id='info'></div>
 	</body>	
 </html>
